--- a/w2d1_Loops.ipynb
+++ b/w2d1_Loops.ipynb
@@ -1710,9 +1710,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
